# mysqlpat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  curvetracker.cpp  curvetracker.h  graphschoser.cpp  graphschoser.h  graphschoser.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mysqlpat-settings.json  mysqlpat.icns  mysqlpat.pro  plot.cpp  plot.h
cmake/modules/: FindQwt.cmake
